--- a/index.html
+++ b/index.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HW-01</title>
   </head>
   <body>
     <header>
-      <a href="/">
-        <img src="./img/WebStudio.svg" alt="лого" width="145" />
-      </a>
       <nav>
+        <a href="/WebStudio">WebStudio</a>
         <ul>
           <li>
             <a href="/Студія">Студія</a>
@@ -24,12 +22,10 @@
           </li>
         </ul>
       </nav>
-      <p>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      </p>
-      <p>
-        <a href="tel:+380961111111">+38 096 111 11 11</a>
-      </p>
+      <ul>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      </ul>
     </header>
 
     <section>
@@ -39,23 +35,33 @@
 
     <section>
       <h2 hidden>Особливості</h2>
-      <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
-      <p>
-        Ідейні міркування, і навіть початок повсякденної роботи з формування
-        позиції.
-      </p>
-      <h3>ПУНКТУАЛЬНІСТЬ</h3>
-      <p>
-        Завдання організації, особливо рамки і місце навчання кадрів тягне у
-        себе.
-      </p>
-      <h3>ПЛАНУВАННЯ</h3>
-      <p>Так само консультація з широким активом значною мірою зумовлює.</p>
-      <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-      <p>
-        Значимість цих проблем настільки очевидна, що реалізація планових
-        завдань.
-      </p>
+      <ul>
+        <li>
+          <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
+          <p>
+            Ідейні міркування, і навіть початок повсякденної роботи з формування
+            позиції.
+          </p>
+        </li>
+        <li>
+          <h3>ПУНКТУАЛЬНІСТЬ</h3>
+          <p>
+            Завдання організації, особливо рамки і місце навчання кадрів тягне у
+            себе.
+          </p>
+        </li>
+        <li>
+          <h3>ПЛАНУВАННЯ</h3>
+          <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+        </li>
+        <li>
+          <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+          <p>
+            Значимість цих проблем настільки очевидна, що реалізація планових
+            завдань.
+          </p>
+        </li>
+      </ul>
     </section>
 
     <section>
@@ -75,36 +81,39 @@
 
     <section>
       <h2>Наша команда</h2>
+      <ul>
+        <li>
+          <img src="img/img_1_1.jpg" alt="Ігор" width="270" height="260" />
+          <h3>Ігор Дем'яненко</h3>
+          <p>Product Designer</p>
+        </li>
+        <li>
+          <img src="img/img_1_2.jpg" alt="Ольга" width="270" height="260" />
+          <h3>Ольга Рєпіна</h3>
+          <p>Frontend Developer</p>
+        </li>
+        <li>
+          <img src="img/img_1_3.jpg" alt="Микола" width="270" height="260" />
+          <h3>Микола Тарасов</h3>
+          <p>Marketing</p>
+        </li>
+        <li>
+          <img src="img/img_1_4.jpg" alt="Михайло" width="270" height="260" />
+          <h3>Михайло Єрмаков</h3>
+          <p>UI Designer</p>
+        </li>
+      </ul>
     </section>
-    <ul>
-      <li>
-        <img src="img/img_1_1.jpg" alt="Ігор" width="270" height="260" />
-        <p>Ігор Дем'яненко</p>
-        <p>Product Designer</p>
-      </li>
-      <li>
-        <img src="img/img_1_2.jpg" alt="Ольга" width="270" height="260" />
-        <p>Ольга Рєпіна</p>
-        <p>Frontend Developer</p>
-      </li>
-      <li>
-        <img src="img/img_1_3.jpg" alt="Микола" width="270" height="260" />
-        <p>Микола Тарасов</p>
-        <p>Marketing</p>
-      </li>
-      <li>
-        <img src="img/img_1_4.jpg" alt="Михайло" width="270" height="260" />
-        <p>Михайло Єрмаков</p>
-        <p>UI Designer</p>
-      </li>
-    </ul>
+
     <footer>
-      <a href="/">
-        <img src="./img/WebStudio.svg" alt="лого" width="145" />
-      </a>
+      <a href="/WebStudio">WebStudio</a>
       <address>
         <ul>
-          <li>м. Київ, пр-т Лесі Українки, 26</li>
+          <li>
+            <a href="м.Київ,пр-тЛесіУкраїнки,26"
+              >м. Київ, пр-т Лесі Українки, 26</a
+            >
+          </li>
           <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
           <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
