--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
       </ul>
     </header>
 
+    <main>
+
     <section>
       <h1>Ефективні рішення для вашого бізнесу</h1>
       <button type="button">Замовити послугу</button>
@@ -104,7 +106,7 @@
         </li>
       </ul>
     </section>
-
+  </main>
     <footer>
       <a href="/WebStudio">WebStudio</a>
       <address>
