--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/styles.css">
-    <title>HW-02</title>
+       <title>HW-02</title>
   </head>
   <body>
     <header>
@@ -17,10 +17,10 @@
         </a>
         <ul class="nav-list list">
           <li class="header-nav-item">
-            <a href="/Студія" class="header-nav-link link">Студія</a>
+                       <a href="./index.html" class="header-nav-link link">Студія</a>
           </li>
           <li class="header-nav-item">
-            <a href="/Портфоліо" class="header-nav-link link">Портфоліо</a>
+                    <a href="./portfolio.html" class="header-nav-link link">Портфоліо</a>
           </li>
           <li class="header-nav-item">
             <a href="/Контакти" class="header-nav-link link">Контакти</a>
@@ -112,7 +112,7 @@
       </ul>
     </section>
   </main>
-    <footer>
+    <footer class="footer-title">
       <a href="/WebStudio" class="logo">
         <span class="first-part">Web</span> 
         <span class="last-part">Studio</span>
