--- a/portfolio.html
+++ b/portfolio.html
@@ -69,7 +69,7 @@
 
         <ul class="list">
           <li>
-            <a href>
+            <a href="">
               <img src="img/img_2_1.jpg" alt="Комп" width="370" height="294" />
               <h2 class="work-name">Технокряк</h2>
               <p class="work-description">Веб-сайт</p>
@@ -77,7 +77,7 @@
           </li>
 
           <li>
-            <a href>
+            <a href="">
               <img src="img/img_2_2.jpg" alt="Комп" width="370" height="294" />
               <h2 class="work-name">Постер New Orlean vs Golden Star</h2>
               <p class="work-description">Дизайн</p>
@@ -85,7 +85,7 @@
           </li>
 
           <li>
-            <a href>
+            <a href="">
               <img src="img/img_2_3.jpg" alt="Комп" width="370" height="294" />
               <h2 class="work-name">Ресторан Seafood</h2>
               <p class="work-description">Додаток</p>
@@ -93,42 +93,42 @@
           </li>
 
           <li>
-            <a href>
+            <a href="">
               <img src="img/img_2_4.jpg" alt="Комп" width="370" height="294" />
               <h2 class="work-name">Проєкт Prime</h2>
               <p class="work-description">Маркетинг</p>
             </a>
           </li>
           <li>
-            <a href>
+            <a href="">
               <img src="img/img_2_5.jpg" alt="Комп" width="370" height="294" />
               <h2 class="work-name">Проєкт Boxes</h2>
               <p class="work-description">Додаток</p>
             </a>
           </li>
           <li>
-            <a href>
+            <a href="">
               <img src="img/img_2_6.jpg" alt="Комп" width="370" height="294" />
               <h2 class="work-name">Inspiration has no Borders</h2>
               <p class="work-description">Веб-сайт</p>
             </a>
           </li>
           <li>
-            <a href>
+            <a href="">
               <img src="img/img_2_7.jpg" alt="Комп" width="370" height="294" />
               <h2 class="work-name">Видання Limited Edition</h2>
               <p class="work-description">Дизайн</p>
             </a>
           </li>
           <li>
-            <a href>
+            <a href="">
               <img src="img/img_2_8.jpg" alt="Комп" width="370" height="294" />
               <h2 class="work-name">Inspiration has no Borders</h2>
               <p class="work-description">Маркетинг</p>
             </a>
           </li>
           <li>
-            <a href>
+            <a href="">
               <img src="img/img_2_9.jpg" alt="Комп" width="370" height="294" />
               <h2 class="work-name">Inspiration has no Borders</h2>
               <p class="work-description">Додаток</p>
