--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
     <main>
       <section class="hero-sec section">
-        <div class="container">
+        <div class="hero-height container">
           <h1 class="hero">
             Ефективні рішення для <br />
             вашого бізнесу
@@ -63,8 +63,8 @@
         </div>
       </section>
 
-      <section class="section">
-        <div class="container">
+      <section class="character section">
+        <div class=" container">
           <h2 hidden>Особливості</h2>
           <ul class="specifics list">
             <li class="item">
@@ -84,7 +84,7 @@
             <li class="item">
               <h3 class="specifics-title">ПЛАНУВАННЯ</h3>
               <p class="specifics-text">
-                Так само консультація з широким активом значною мірою зумовлює.
+                Так само консультація з широким активом&nbspзначною&nbspмірою&nbspзумовлює.
               </p>
             </li>
             <li class="item">
@@ -124,21 +124,21 @@
         <div class="container">
           <h2 class="title">Наша команда</h2>
           <ul class="work list">
-            <li class="item">
+            <li class="item-box item">
               <img src="img/img_1_1.jpg" alt="Ігор" width="270" height="260" />
               <div class="team-sec">
                 <h3 class="team-name">Ігор Дем'яненко</h3>
                 <p class="team-position">Product Designer</p>
               </div>
             </li>
-            <li class="item">
+            <li class="item-box item">
               <img src="img/img_1_2.jpg" alt="Ольга" width="270" height="260" />
               <div class="team-sec">
                 <h3 class="team-name">Ольга Рєпіна</h3>
                 <p class="team-position">Frontend Developer</p>
               </div>
             </li>
-            <li class="item">
+            <li class="item-box item">
               <img
                 src="img/img_1_3.jpg"
                 alt="Микола"
@@ -150,7 +150,7 @@
                 <p class="team-position">Marketing</p>
               </div>
             </li>
-            <li class="item">
+            <li class="item-box item">
               <img
                 src="img/img_1_4.jpg"
                 alt="Михайло"
