--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
     <main>
       <section class="hero-sec section">
-        <div class="hero-height container">
+        <div class="container">
           <h1 class="hero">
             Ефективні рішення для <br />
             вашого бізнесу
@@ -64,8 +64,8 @@
       </section>
 
       <section class="character section">
-        <div class=" container">
-          <h2 hidden>Особливості</h2>
+        <div class="container">
+          <h2 hidden class="visually-hidden">Особливості</h2>
           <ul class="specifics list">
             <li class="item">
               <h3 class="specifics-title">УВАГА ДО ДЕТАЛЕЙ</h3>
@@ -84,7 +84,8 @@
             <li class="item">
               <h3 class="specifics-title">ПЛАНУВАННЯ</h3>
               <p class="specifics-text">
-                Так само консультація з широким активом&nbspзначною&nbspмірою&nbspзумовлює.
+                Так само консультація з широким
+                активом&nbspзначною&nbspмірою&nbspзумовлює.
               </p>
             </li>
             <li class="item">
@@ -168,18 +169,18 @@
     </main>
     <footer class="footer-title">
       <div class="container">
-        <a href="/WebStudio" class="logo">
+        <a href="/WebStudio" class="logo-footer">
           <span class="first-part">Web</span>
           <span class="footer-last-part">Studio</span>
         </a>
         <address class="footer-title-adr">
           <ul class="footer-list">
-            <li>
+            <li class="footer-li">
               <a class="footer-adress link" href="м.Київ,пр-тЛесіУкраїнки,26"
                 >м. Київ, пр-т Лесі Українки, 26</a
               >
             </li>
-            <li>
+            <li class="footer-li">
               <a class="footer-mail-link link" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
               >
