--- a/portfolio.html
+++ b/portfolio.html
@@ -55,7 +55,7 @@
     <main>
       <section class="section">
         <div class="container">
-          <h1 hidden class="title">Наші роботи</h1>
+          <h1 hidden class="visually-hidden title">Наші роботи</h1>
           <ul class="btn-center list">
             <li class="btn-width">
               <button class="portfolio-btn" type="button">Усі</button>
@@ -211,18 +211,18 @@
 
     <footer class="footer-title">
       <div class="container">
-        <a href="/WebStudio" class="logo">
+        <a href="/WebStudio" class="logo-footer">
           <span class="first-part">Web</span>
           <span class="footer-last-part">Studio</span>
         </a>
         <address class="footer-title-adr">
           <ul class="footer-list">
-            <li>
+            <li class="footer-li">
               <a class="footer-adress link" href="м.Київ,пр-тЛесіУкраїнки,26"
                 >м. Київ, пр-т Лесі Українки, 26</a
               >
             </li>
-            <li>
+            <li class="footer-li">
               <a class="footer-mail-link link" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
               >
