--- a/index.html
+++ b/index.html
@@ -40,17 +40,27 @@
         <ul class="list">
           <li>
             <a class="header-mail-link link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
+              >
+              <svg class="header-mail-icon" width="16" height="12">
+                <use href="./img/symbol-defs.svg#icon-envelope-hover"></use>
+              </svg>
+              <span>info@devstudio.com</span>
+              </a
             >
           </li>
           <li>
             <a class="header-tel-link link" href="tel:+380961111111"
-              >+38 096 111 11 11</a
+              >
+              <svg class="header-tel-icon" width="16" height="12">
+                <use href="./img/symbol-defs.svg#icon-smartphone"></use>
+              </svg>
+              +38 096 111 11 11</a
             >
           </li>
         </ul>
       </div>
     </header>
+
 
     <main>
       <section class="hero-sec section">
@@ -68,6 +78,11 @@
           <h2 hidden class="visually-hidden">Особливості</h2>
           <ul class="specifics list">
             <li class="item">
+              <div class="character-box">
+                <svg width="70" height="70">
+                  <use href="./img/symbol-defs.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="specifics-title">УВАГА ДО ДЕТАЛЕЙ</h3>
               <p class="specifics-text">
                 Ідейні міркування, і навіть початок повсякденної роботи з
