--- a/index.html
+++ b/index.html
@@ -90,6 +90,11 @@
               </p>
             </li>
             <li class="item">
+              <div class="character-box">
+                <svg width="70" height="70">
+                  <use href="./img/symbol-defs.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="specifics-title">ПУНКТУАЛЬНІСТЬ</h3>
               <p class="specifics-text">
                 Завдання організації, особливо рамки і місце навчання кадрів
@@ -97,6 +102,11 @@
               </p>
             </li>
             <li class="item">
+              <div class="character-box">
+                <svg width="70" height="70">
+                  <use href="./img/symbol-defs.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="specifics-title">ПЛАНУВАННЯ</h3>
               <p class="specifics-text">
                 Так само консультація з широким
@@ -104,6 +114,11 @@
               </p>
             </li>
             <li class="item">
+              <div class="character-box">
+                <svg width="70" height="70">
+                  <use href="./img/symbol-defs.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="specifics-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
               <p class="specifics-text">
                 Значимість цих проблем настільки очевидна, що реалізація
@@ -145,6 +160,23 @@
               <div class="team-sec">
                 <h3 class="team-name">Ігор Дем'яненко</h3>
                 <p class="team-position">Product Designer</p>
+                <ul class="socials list">
+                  <li><a class="socials-link link" href="https://instagram.com">
+                    <svg width="20" height="20">
+                      <use href="./img/symbol-defs.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+
+                <li><a class="socials-link link" href="https://twitter.com">
+                  <svg width="20" height="20">
+                    <use href="./img/symbol-defs.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+                  <li></li>
+                  <li></li>
+                </ul>
               </div>
             </li>
             <li class="item-box item">
