--- a/portfolio.html
+++ b/portfolio.html
@@ -74,21 +74,23 @@
             </li>
           </ul>
 
-          <ul class="portfolio-name list">
-            <li class="portfolio-work">
-              <a href="">
-                <img
-                  src="img/img_2_1.jpg"
-                  alt="Комп"
-                  width="370"
-                  height="294"
-                />
-                <div class="portfolio-examples">
-                  <h2 class="work-name">Технокряк</h2>
-                  <p class="work-description">Веб-сайт</p>
-                </div>
-              </a>
-            </li>
+
+            <ul class="portfolio-name list">
+              <li class="portfolio-work">
+                <a href="">
+                  <img
+                    src="img/img_2_1.jpg"
+                    alt="Комп"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="portfolio-examples">
+                    <h2 class="work-name">Технокряк</h2>
+                    <p class="work-description">Веб-сайт</p>
+                  </div>
+                </a>
+              </li>
+
 
             <li class="portfolio-work">
               <a href="">
@@ -102,6 +104,12 @@
                   <h2 class="work-name">Постер New Orlean vs Golden Star</h2>
                   <p class="work-description">Дизайн</p>
                 </div>
+
+                <!-- <div class="portfolio-examples">
+                  
+                  <h2 class="work-name">Постер New Orlean vs Golden Star</h2>
+                  <p class="work-description">Дизайн</p>
+                </div> -->
               </a>
             </li>
 
@@ -210,8 +218,9 @@
     </main>
 
     <footer class="footer-title">
-      <div class="container">
-        <a href="/WebStudio" class="logo-footer">
+      <div class="container footer-container">
+        <div>
+          <a href="/WebStudio" class="logo-footer">
           <span class="first-part">Web</span>
           <span class="footer-last-part">Studio</span>
         </a>
@@ -233,8 +242,44 @@
               >
             </li>
           </ul>
-        </address>
+        </address></div>
+        <div>
+        <p class="footer-socials-name">приєднуйтесь</p>
+        <ul class="socials list">
+          <li class="socials-item-footer">
+            <a class="socials-link-footer link" href="https://instagram.com">
+              <svg class="socials-icon" width="20" height="20">
+                <use href="./img/symbol-defs.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+
+          <li>
+            <a class="socials-link-footer link" href="https://twitter.com"
+            >
+              <svg width="20" height="20">
+                <use href="./img/symbol-defs.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a class="socials-link-footer link" href="https://facebook.com">
+              <svg width="20" height="20">
+                <use href="./img/symbol-defs.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a class="socials-link-footer link" href="https://linkedin.com">
+              <svg width="20" height="20">
+                <use href="./img/symbol-defs.svg#icon-linkedin"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
       </div>
+      </div>
+      
     </footer>
   </body>
 </html>
