--- a/index.html
+++ b/index.html
@@ -171,20 +171,20 @@
                     <a class="socials-link link" href="https://twitter.com"
                     >
                       <svg width="20" height="20">
-                        <use href="./img/symbol-defs.svg#icon-twitter"></use>
+                        <use class="socials-icon" href="./img/symbol-defs.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a class="socials-link link" href="https://facebook.com">
-                      <svg width="20" height="20">
+                      <svg class="socials-icon" width="20" height="20">
                         <use href="./img/symbol-defs.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a class="socials-link link" href="https://linkedin.com">
-                      <svg width="20" height="20">
+                      <svg class="socials-icon" width="20" height="20">
                         <use href="./img/symbol-defs.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -209,21 +209,21 @@
                   <li>
                     <a class="socials-link link" href="https://twitter.com"
                     >
-                      <svg width="20" height="20">
+                      <svg class="socials-icon" width="20" height="20">
                         <use href="./img/symbol-defs.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a class="socials-link link" href="https://facebook.com">
-                      <svg width="20" height="20">
+                      <svg class="socials-icon" width="20" height="20">
                         <use href="./img/symbol-defs.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a class="socials-link link" href="https://linkedin.com">
-                      <svg width="20" height="20">
+                      <svg class="socials-icon" width="20" height="20">
                         <use href="./img/symbol-defs.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -253,21 +253,21 @@
                   <li>
                     <a class="socials-link link" href="https://twitter.com"
                     >
-                      <svg width="20" height="20">
+                      <svg class="socials-icon" width="20" height="20">
                         <use href="./img/symbol-defs.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a class="socials-link link" href="https://facebook.com">
-                      <svg width="20" height="20">
+                      <svg class="socials-icon" width="20" height="20">
                         <use href="./img/symbol-defs.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a class="socials-link link" href="https://linkedin.com">
-                      <svg width="20" height="20">
+                      <svg class="socials-icon" width="20" height="20">
                         <use href="./img/symbol-defs.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -288,7 +288,7 @@
                 <ul class="socials list">
                   <li class="socials-item">
                     <a class="socials-link link" href="https://instagram.com">
-                      <svg class="socials-icon" width="20" height="20">
+                      <svg class="socials-icon" class="socials-icon" width="20" height="20">
                         <use href="./img/symbol-defs.svg#icon-instagram"></use>
                       </svg>
                     </a>
@@ -298,20 +298,20 @@
                     <a class="socials-link link" href="https://twitter.com"
                     >
                       <svg width="20" height="20">
-                        <use href="./img/symbol-defs.svg#icon-twitter"></use>
+                        <use class="socials-icon" href="./img/symbol-defs.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a class="socials-link link" href="https://facebook.com">
-                      <svg width="20" height="20">
+                      <svg class="socials-icon" width="20" height="20">
                         <use href="./img/symbol-defs.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a class="socials-link link" href="https://linkedin.com">
-                      <svg width="20" height="20">
+                      <svg class="socials-icon" width="20" height="20">
                         <use href="./img/symbol-defs.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -409,7 +409,7 @@
         <ul class="socials list">
           <li class="socials-item-footer">
             <a class="socials-link-footer link" href="https://instagram.com">
-              <svg class="socials-icon" width="20" height="20">
+              <svg class="socials-icon-footer" width="20" height="20">
                 <use href="./img/symbol-defs.svg#icon-instagram"></use>
               </svg>
             </a>
