--- a/portfolio.html
+++ b/portfolio.html
@@ -25,12 +25,12 @@
           </a>
           <ul class="nav-list list">
             <li class="header-nav-item">
-              <a href="./index.html" class="header-nav-link">Студія</a>
+              <a href="./index.html" class="header-nav-link "
+                >Студія</a
+              >
             </li>
             <li class="header-nav-item">
-              <a href="./portfolio.html" class="header-nav-link ref-color"
-                >Портфоліо</a
-              >
+              <a href="./portfolio.html" class="header-nav-link ref-color">Портфоліо</a>
             </li>
             <li class="header-nav-item">
               <a href="/Контакти" class="header-nav-link">Контакти</a>
@@ -38,16 +38,24 @@
           </ul>
         </nav>
         <ul class="list">
-          <li>
-            <a class="header-mail-link link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a class="header-tel-link link" href="tel:+380961111111"
-              >+38 096 111 11 11</a
-            >
-          </li>
+          <div class="header-contacts">
+            <li>
+              <a class="header-mail-link link" href="mailto:info@devstudio.com">
+                <svg class="header-mail-icon link" width="16" height="12">
+                  <use href="./img/symbol-defs.svg#icon-envelope"></use>
+                </svg>
+                <span>info@devstudio.com</span>
+              </a>
+            </li>
+            <li>
+              <a class="header-tel-link link" href="tel:+380961111111">
+                <svg class="header-tel-icon link" width="10" height="16">
+                  <use href="./img/symbol-defs.svg#icon-smartphone"></use>
+                </svg>
+                <span>+38 096 111 11 11</span></a
+              >
+            </li>
+          </div>
         </ul>
       </div>
     </header>
