--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,7 @@
                 >Студія</a
               >
             </li>
-            <li class="header-nav-item">
+            <li class="header-nav-item current">
               <a href="./portfolio.html" class="header-nav-link ref-color">Портфоліо</a>
             </li>
             <li class="header-nav-item">
@@ -85,6 +85,7 @@
 
             <ul class="portfolio-name list">
               <li class="portfolio-work">
+                <div class="wrapper-portfolio">
                 <a href="">
                   <img
                     src="img/img_2_1.jpg"
@@ -92,6 +93,12 @@
                     width="370"
                     height="294"
                   />
+                  <div class="overlay-box-portfolio">
+                    <p class="overlay-text-portfolio">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                    </p>
+                  </div>
+                </div>
                   <div class="portfolio-examples">
                     <h2 class="work-name">Технокряк</h2>
                     <p class="work-description">Веб-сайт</p>
@@ -101,6 +108,7 @@
 
 
             <li class="portfolio-work">
+              <div class="wrapper-portfolio">
               <a href="">
                 <img
                   src="img/img_2_2.jpg"
@@ -108,20 +116,22 @@
                   width="370"
                   height="294"
                 />
+                <div class="overlay-box-portfolio">
+                  <p class="overlay-text-portfolio">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
+              </div>
                 <div class="portfolio-examples">
                   <h2 class="work-name">Постер New Orlean vs Golden Star</h2>
                   <p class="work-description">Дизайн</p>
                 </div>
 
-                <!-- <div class="portfolio-examples">
-                  
-                  <h2 class="work-name">Постер New Orlean vs Golden Star</h2>
-                  <p class="work-description">Дизайн</p>
-                </div> -->
               </a>
             </li>
 
             <li class="portfolio-work">
+              <div class="wrapper-portfolio">
               <a href="">
                 <img
                   src="img/img_2_3.jpg"
@@ -129,6 +139,12 @@
                   width="370"
                   height="294"
                 />
+                <div class="overlay-box-portfolio">
+                  <p class="overlay-text-portfolio">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
+              </div>
                 <div class="portfolio-examples">
                   <h2 class="work-name">Ресторан Seafood</h2>
                   <p class="work-description">Додаток</p>
@@ -137,6 +153,7 @@
             </li>
 
             <li class="portfolio-work">
+              <div class="wrapper-portfolio">
               <a href="">
                 <img
                   src="img/img_2_4.jpg"
@@ -144,6 +161,12 @@
                   width="370"
                   height="294"
                 />
+                <div class="overlay-box-portfolio">
+                  <p class="overlay-text-portfolio">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
+              </div>
                 <div class="portfolio-examples">
                   <h2 class="work-name">Проєкт Prime</h2>
                   <p class="work-description">Маркетинг</p>
@@ -151,6 +174,7 @@
               </a>
             </li>
             <li class="portfolio-work">
+              <div class="wrapper-portfolio">
               <a href="">
                 <img
                   src="img/img_2_5.jpg"
@@ -158,6 +182,12 @@
                   width="370"
                   height="294"
                 />
+                <div class="overlay-box-portfolio">
+                  <p class="overlay-text-portfolio">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
+              </div>
                 <div class="portfolio-examples">
                   <h2 class="work-name">Проєкт Boxes</h2>
                   <p class="work-description">Додаток</p>
@@ -165,6 +195,7 @@
               </a>
             </li>
             <li class="portfolio-work">
+              <div class="wrapper-portfolio">
               <a href="">
                 <img
                   src="img/img_2_6.jpg"
@@ -172,6 +203,12 @@
                   width="370"
                   height="294"
                 />
+                <div class="overlay-box-portfolio">
+                  <p class="overlay-text-portfolio">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
+              </div>
                 <div class="portfolio-examples">
                   <h2 class="work-name">Inspiration has no Borders</h2>
                   <p class="work-description">Веб-сайт</p>
@@ -179,6 +216,7 @@
               </a>
             </li>
             <li class="portfolio-work">
+              <div class="wrapper-portfolio">
               <a href="">
                 <img
                   src="img/img_2_7.jpg"
@@ -186,6 +224,12 @@
                   width="370"
                   height="294"
                 />
+                <div class="overlay-box-portfolio">
+                  <p class="overlay-text-portfolio">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
+              </div>
                 <div class="portfolio-examples">
                   <h2 class="work-name">Видання Limited Edition</h2>
                   <p class="work-description">Дизайн</p>
@@ -193,6 +237,7 @@
               </a>
             </li>
             <li class="portfolio-work">
+              <div class="wrapper-portfolio">
               <a href="">
                 <img
                   src="img/img_2_8.jpg"
@@ -200,6 +245,12 @@
                   width="370"
                   height="294"
                 />
+                <div class="overlay-box-portfolio">
+                  <p class="overlay-text-portfolio">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
+              </div>
                 <div class="portfolio-examples">
                   <h2 class="work-name">Inspiration has no Borders</h2>
                   <p class="work-description">Маркетинг</p>
@@ -207,6 +258,7 @@
               </a>
             </li>
             <li class="portfolio-work">
+              <div class="wrapper-portfolio">
               <a href="">
                 <img
                   src="img/img_2_9.jpg"
@@ -214,6 +266,12 @@
                   width="370"
                   height="294"
                 />
+                <div class="overlay-box-portfolio">
+                  <p class="overlay-text-portfolio">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
+              </div>
                 <div class="portfolio-examples">
                   <h2 class="work-name">Inspiration has no Borders</h2>
                   <p class="work-description">Додаток</p>
