--- a/index.html
+++ b/index.html
@@ -516,12 +516,11 @@
               </svg>
         </label>
 
-<label class="form-field">
-  <span class="form-label">Коментар</span>
-  <textarea class="form-input form-message" name="" rows="10" placeholder="Введіть текст">
-      </textarea>
  
-</label>
+      <label for="user-comment" class="form-field">
+        <span class="form-label">Коментар</span>
+        <textarea name="user-comment" placeholder="Введіть текст" class="form-input-com form-message" id="user-comment"></textarea></label>
+
       </div>
     
         <label for="">
