--- a/index.html
+++ b/index.html
@@ -523,9 +523,12 @@
 
       </div>
     
-        <label for="">
-          <input type="checkbox" name=""/>
-          <span class="form-license">Погоджуюся з розсилкою та приймаю  <a class="form-license-text" href="">Умови договору</a> </span>
+        <label class="checkbox-box">
+          <input class="checkbox" type="checkbox" name="" value="Погоджуюся з розсилкою та приймаю Умови договору"/>
+         <span class="checkbox-icon"></span>
+    <span class="form-license">Погоджуюся з розсилкою та приймаю </span>
+           <a class="form-license-text" href="">Умови договору</a>
+                   <!-- <span class="form-license">Погоджуюся з розсилкою та приймаю  <a class="form-license-text" href="">Умови договору</a> </span> -->
         </label>
      <button class="form-btn" type="submit">Відправити</button>
     </form>
