--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@ clients
 footer
 =============================== -->
 
-    <footer class="footer footer--parameters">
+    <footer class="footer">
       <div class="container footer__container">
         <div>
           <a href="/WebStudio" class="logo">
